# Tao-Apri

./: .env.example  .gitignore  README.md  pyproject.toml  social_persona_ai.db  start.ps1
app/: main.py
app/api/: schemas.py
app/core/: admin_auth_service.py  clock.py  config.py  container.py  logging.py  markdown_assets.py  metrics.py  onebot_service.py  qq_qr_login_service.py  rule_lexicons.py  runtime_config.py
app/domain/: conversation_scope.py  models.py  (+2 more)
docs/: api.md  architecture.md  configuration.md
scripts/: package_release.py  sync_env_defaults.py
tests/: test_abort_and_termination.py  test_admin_api.py  test_api.py  test_config_effective.py  test_conversation_window_manager.py  test_delayed_task.py  test_emotion_engine.py  test_emotion_persistence.py  test_group_scope_policy.py  test_history_reference_builder.py  test_hostile_input.py  test_identity_and_retrieval_policy.py  test_image_understanding_service.py  test_llm_client_extract_json.py  test_llm_client_should_reply_decider_type_coercion.py  test_llm_client_unified_decision.py  test_llm_system_prompt_controls.py  test_memory_heat.py  test_nickname_persistence.py  test_onebot_ws_client.py  test_periodic_jobs.py  test_persona_identity.py  test_profile_generation.py  test_prompt_composer.py  test_relation_access.py  test_relation_boundary.py  test_relation_policy.py  test_retrieval_policy_threshold_config.py  test_rule_lexicons.py  test_runtime_config.py  test_should_reply_policy.py  test_task_queue.py  test_tool_runtime.py  test_window_delivery_timeout.py  test_window_preprocessor.py
(+94 files in other folders)
