[project]
name = "social-persona-ai"
version = "0.1.0"
description = "Public non-isolated anthropomorphic social AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "rapidocr-onnxruntime>=1.2.3",
  "uvicorn>=0.30.0",
  "websockets>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
